# athan

./: .all-contributorsrc  .eslintrc.cjs  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1692727191912-f04b63f3f8866.mjs
.github/workflows/: release.yml  test.yml
patches/: react-virtualized@9.22.5.patch
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  config.rs  config.toml  main.rs
src-tauri/src/athan/: mod.rs
src/assets/css/: app.css  fonts.css  scrollbar.css  select.css  styles.css
src/components/atoms/: button.tsx  calendar.tsx  date-picker.tsx  input.tsx  label.tsx  language-selector.tsx  location.tsx  logo.tsx  menu-icon.tsx  menu-item.tsx  next-prayer.tsx  popover.tsx  prayer-icon.tsx  prayer.tsx  preview-button.tsx  radio-group.tsx  select.tsx  slider.tsx  svg-icon.tsx  switch.tsx  table.tsx  titlebar.tsx  toast.tsx  toaster.tsx  tooltip.tsx  volume-level.tsx
src/components/molecules/: Titlebar.tsx  menu.tsx  prayers-table.tsx  prayers.tsx  sidebar.tsx
src/components/pages/: home.tsx  settings.tsx  tasbih.tsx
src/components/templates/: layout.tsx
src/hooks/: useDynamicSvgImport.ts  usePrayerTimes.ts  useToast.ts
src/i18n/: i18n.js  i18n.ts
src/i18n/ar/: ar.json
src/lib/: date.ts  routes.tsx  sound.ts  storage.ts  store.ts  validation.ts
src/lib/config/: agents.ts  prayers.tsx
src/pages/: calendar.tsx  home.tsx  settings.tsx  tasbih.tsx
src/providers/: providers.tsx  theme-provider.tsx
src/types/: index.ts  prayer.ts  react-select-virtualized.d.ts  svgr.d.ts
