[package]
name = "athan-time"
version = "0.0.0"
description = "An athan reminder app"
authors = ["you"]
license = "MIT"
repository = "https://github.com/The-Embassy-Collective/athan"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "api-all",
    "system-tray",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-vibrancy = "0.4.0"
window-shadows = "0.2.1"
sentry-tauri = "0.2.0"
auto-launch = "0.4.0"
dunce = "1.0.4"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.20"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
chrono = "0.4.6"
tokio = { version = "1.32.0", features = ["full"] }
tokio-timer = "0.2.13"
playback-rs = "0.4.3"
islam = "2.0.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
